# Rustenger

./: .gitignore  Cargo.toml  LICENSE  README.md
rustenger-client-console/: Cargo.toml
rustenger-client-console/src/: framed.rs  main.rs  parse.rs
rustenger-client-console/src/framed/: framed_read.rs  framed_write.rs
rustenger-codec/: Cargo.toml
rustenger-codec/src/: lib.rs
rustenger-server/: Cargo.toml
rustenger-server/src/: client.rs  main.rs  room.rs  server.rs  utils.rs
rustenger-server/src/server/: room.rs
rustenger-server/src/server/room/: client.rs  user.rs
rustenger-shared/: Cargo.toml
rustenger-shared/src/: account.rs  codec.rs  commands.rs  lib.rs  message.rs
