[package]
name = "rustenger-codec"
version = "0.0.0"
authors = ["Aitzhanov Ivan <aitvann@gmail.com>"]
edition = "2018"

[dependencies]
rustenger-shared = { version = "0", path = "../rustenger-shared" }
tokio-util = { version = "0.2", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
arrayvec = { version = "0.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "0.5"
