[package]
name = "rustenger-server"
version = "0.0.0"
authors = ["Aitzhanov Ivan <aitvann@gmail.com>"]
edition = "2018"
description = "Asynchronous server for Rustenger"
repository = "https://github.com/aitvann/Rustenger"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["tcp", "stream", "net", "macros", "io-util", "sync"] }
tokio-util = { version = "0.2", features = ["codec"] }

tokio-postgres = "0.5"
# diesel = "1.4.3"

log = { version = "0.4", features = ["release_max_level_info"] }
fern = { version = "0.5", features = ["colored"] }

pin-project = "0.4"
# pin-project-lite = "0.1"

thiserror = "1.0"
chrono = "0.4"
clap = "2.33"
